# Koppeltaal-2-0-Implementation-Guide

./: KT2_IMPLEMENTATION_GUIDE.md  pyproject.toml
