[tool.poetry]
name = "koppeltaal-2-0-implementation-guide"
version = "0.1.0"
description = ""
authors = ["Roland Groen <roland@edia.nl>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

